--- a/bex1.html
+++ b/bex1.html
@@ -5,8 +5,8 @@
 </head>
 <body>
     <h1>Hello World!</h1>
-    <p>This is bestha code now this aother
-        
+    <p>This is bestha code now this another
+
     </p>
 </body>
 </html>
